Разметка страницы формы_испр

--- a/source/form.html
+++ b/source/form.html
@@ -1,3 +1,8 @@
+<!--  ПРости меня, Светлана, я тут накосячил с Git-ом.
+      Не так назвал ветку, удалял ее, потом вернул, затем push, потом еще что-то...
+    В общем, мы с Git-ом начинаем дружить, но иногда он ведет себя не по-дружуски.
+    Просто, как я понимаю, ты не будешь видеть тех изменений, которые я внес по твоим поправкам. Сорри. Обещаю исправиться
+ -->
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
@@ -17,27 +22,16 @@
       <button class="hamburger-button">
         <span class="visually-hidden">Open/Close menu</span>
       </button>
-<<<<<<< Updated upstream
-      <nav class="main-nav modal visually-hidden">
-=======
       <nav class="main-nav visually-hidden">
->>>>>>> Stashed changes
         <ul class="main-nav__list">
           <li class="main-nav__list-item">
             <a href="blankpage.html">О СЕРВИСЕ</a>
           </li>
           <li class="main-nav__list-item">
-<<<<<<< Updated upstream
-            <a href="blankpage.html">НАПРАВЛЕНИЯ</a>
-          </li>
-          <li class="main-nav__list-item">
-            <a href="blankpage.html">ПОПУТЧИКИ</a>
-=======
             <a href="form.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="main-nav__list-item">
             <a href="catalog.html">ПОПУТЧИКИ</a>
->>>>>>> Stashed changes
           </li>
         </ul>
         <a class="authorization-link" href="auth.html">АВТОРИЗАЦИЯ</a>
