Разметка страницы формы ver2

--- a/source/index.html
+++ b/source/index.html
@@ -21,10 +21,10 @@
             <a href="blankpage.html">О СЕРВИСЕ</a>
           </li>
           <li class="main-nav__list-item">
-            <a href="blankpage.html">НАПРАВЛЕНИЯ</a>
+            <a href="form.html">НАПРАВЛЕНИЯ</a>
           </li>
           <li class="main-nav__list-item">
-            <a href="blankpage.html">ПОПУТЧИКИ</a>
+            <a href="catalog.html">ПОПУТЧИКИ</a>
           </li>
         </ul>
         <a class="authorization-link" href="auth.html">АВТОРИЗАЦИЯ</a>
