--- a/source/form.html
+++ b/source/form.html
@@ -1,8 +1,3 @@
-<!--  ПРости меня, Светлана, я тут накосячил с Git-ом.
-      Не так назвал ветку, удалял ее, потом вернул, затем push, потом еще что-то...
-    В общем, мы с Git-ом начинаем дружить, но иногда он ведет себя не по-дружуски.
-    Просто, как я понимаю, ты не будешь видеть тех изменений, которые я внес по твоим поправкам. Сорри. Обещаю исправиться
- -->
 <!DOCTYPE html>
 <html class="page" lang="ru">
 
@@ -191,15 +186,15 @@
           <div class="calendar">
             <p class="calendar__month">Март 2019</p>
             <table class="calendar__table">
-              <th class="calendar__days-list">
-                <td class="calendar__day">П</td>
-                <td class="calendar__day">В</td>
-                <td class="calendar__day">С</td>
-                <td class="calendar__day">Ч</td>
-                <td class="calendar__day">П</td>
-                <td class="calendar__day calendar__day--weekend">С</td>
-                <td class="calendar__day calendar__day--weekend">В</td>
-              </th>
+              <td class="calendar__days-list">
+                <th class="calendar__day">П</th>
+                <th class="calendar__day">В</th>
+                <th class="calendar__day">С</th>
+                <th class="calendar__day">Ч</th>
+                <th class="calendar__day">П</th>
+                <th class="calendar__day calendar__day--weekend">С</th>
+                <th class="calendar__day calendar__day--weekend">В</th>
+              </td>
               <tr>
                 <td class="calendar__number">23</td>
                 <td class="calendar__number">24</td>
