--- a/source/form.html
+++ b/source/form.html
@@ -186,7 +186,7 @@
           <div class="calendar">
             <p class="calendar__month">Март 2019</p>
             <table class="calendar__table">
-              <td class="calendar__days-list">
+              <tr class="calendar__days-list">
                 <th class="calendar__day">П</th>
                 <th class="calendar__day">В</th>
                 <th class="calendar__day">С</th>
@@ -194,7 +194,7 @@
                 <th class="calendar__day">П</th>
                 <th class="calendar__day calendar__day--weekend">С</th>
                 <th class="calendar__day calendar__day--weekend">В</th>
-              </td>
+              </tr>
               <tr>
                 <td class="calendar__number">23</td>
                 <td class="calendar__number">24</td>
@@ -345,7 +345,7 @@
           </div>
           <a class="plans-step__some-step" href="#plans-step2">НА ШАГ НАЗАД</a>
         </div>
-        <button class="plans-step__submit" for="add-plans-form" type="submit">Отправить</button>
+        <button class="plans-step__submit" type="submit">Отправить</button>
 
       </form>
     </section>
