--- a/source/index.html
+++ b/source/index.html
@@ -488,6 +488,7 @@
       </div>
     </section>
     <section class="map">
+      <h2 class="visually-hidden">Карта</h2>
       <div class="map__wrapper">
         <svg class="map__mark-icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
           xmlns="http://www.w3.org/2000/svg">
@@ -507,7 +508,7 @@
         <div class="map__position-icon"></div>
         <iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1606179607052!5m2!1sru!2sru"
-          width="320" height="424" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+          width="320" height="424" style="border:0;" allowfullscreen="" aria-hidden="false"
           tabindex="0"></iframe>
       </div>
     </section>
