--- a/source/index.html
+++ b/source/index.html
@@ -527,11 +527,11 @@
       </div>
     </section>
     <section class="map">
+      <h2 class="visually-hidden">Карта</h2>
       <iframe class="map__map-google"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.686536866056!2d30.321989380876403!3d59.93734346338867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1608728576437!5m2!1sru!2sru"
-        width="320" height="424" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+        width="320" height="424" style="border:0;" allowfullscreen="" aria-hidden="false"
         tabindex="0"></iframe>
-      </div>
     </section>
   </main>
   <footer class="footer">
@@ -578,7 +578,7 @@
       </ul>
       <div class="footer__author">
         <span class="footer__author-text">Разработано</span>
-        <a class="footer__author-link"href="https://htmlacademy.ru/intensive/adaptive" title="HTMLAcademy adaptive">
+        <a class="footer__author-link" href="https://htmlacademy.ru/intensive/adaptive" title="HTMLAcademy adaptive">
           <img src="img/htmlacademy.svg" alt="Logo HTMLAcademy" width="27" height="33" />
         </a>
       </div>
