--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class="body page__body">
-  <div class="business-rates-modal visually-hidden">
+  <div class="modal-window business-rates-modal visually-hidden">
     <div class="business-rates-modal__wrapper wrapper">
       <h2 class="section-title section-title--margin">
         Бизнес-тарифы
@@ -32,7 +32,7 @@
           Индивидуально
         </li>
       </ul>
-      <button class="business-rates-modal__close-modal">
+      <button class="modal-window__close-modal">
         ЗАКРЫТЬ ОКНО
       </button>
     </div>
@@ -62,28 +62,32 @@
           </li>
         </ul>
         <a class="authorization-link" href="auth.html">АВТОРИЗАЦИЯ</a>
-        <div class="phone-block">
-          <svg class="phone-block__phone-icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <circle cx="22.5" cy="22.5" r="22.5" fill="#121936" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M22.4999 15.0862C19.7035 15.0862 16.9003 15.5588 15.8832 16.5009C15.0393 17.2825 14.758 18.6633 14.6632 19.5375C14.6632 19.5375 14.6501 19.6239 14.6501 19.6611C14.6501 20.0039 14.9444 20.2789 15.3043 20.2789C15.3468 20.2789 16.92 20.1584 17.8685 20.0843C17.8913 20.0811 17.9143 20.0781 17.9372 20.0719C18.2904 20.0627 18.575 19.7908 18.575 19.4541L18.5782 18.237C18.5782 17.8601 18.9021 17.5574 19.3012 17.5574H25.6987C26.0978 17.5574 26.4218 17.8601 26.4218 18.237L26.425 19.4541C26.425 19.7908 26.7095 20.0627 27.0628 20.0719C27.0854 20.0781 27.1085 20.0811 27.1315 20.0843C28.0801 20.1583 29.6533 20.2789 29.6957 20.2789C30.0553 20.2789 30.3499 20.0039 30.3499 19.6611C30.3499 19.6239 30.3368 19.5375 30.3368 19.5375C30.2419 18.6633 29.9609 17.2826 29.117 16.5009C28.0996 15.5588 25.2964 15.0862 22.4999 15.0862ZM22.4999 23.1177C21.7771 23.1177 21.1916 23.6706 21.1916 24.3533C21.1916 25.036 21.7771 25.5889 22.4999 25.5889C23.2228 25.5889 23.8082 25.036 23.8082 24.3533C23.8082 23.6706 23.2228 23.1177 22.4999 23.1177ZM21.5187 20.3375V19.5653C21.5187 19.139 21.1524 18.793 20.7011 18.793C20.2498 18.793 19.8834 19.1391 19.8834 19.5653V20.3375L15.4709 24.7889C15.1669 25.07 14.9771 25.4622 14.9771 25.8948V27.1335C14.9771 27.8162 15.5626 28.3691 16.2854 28.3691H16.6125V29.1414C16.6125 29.5677 16.979 29.9136 17.4302 29.9136C17.8815 29.9136 18.2479 29.5677 18.2479 29.1414V28.3691H26.752V29.1414C26.752 29.5677 27.1182 29.9136 27.5697 29.9136C28.021 29.9136 28.3873 29.5677 28.3873 29.1414V28.3691H28.7144C29.4373 28.3691 30.0227 27.8162 30.0227 27.1335V25.8948C30.0227 25.4622 29.833 25.07 29.5289 24.7889L25.1166 20.3375V19.5653C25.1166 19.139 24.7502 18.793 24.2989 18.793C23.8476 18.793 23.4812 19.1391 23.4812 19.5653V20.3375H21.5187ZM22.4999 21.8821C23.9456 21.8821 25.1166 22.988 25.1166 24.3533C25.1166 25.7187 23.9457 26.8247 22.4999 26.8247C21.0543 26.8247 19.8834 25.7187 19.8834 24.3533C19.8834 22.988 21.0543 21.8821 22.4999 21.8821Z"
-              fill="" />
-          </svg>
-          <a class="phone-block__phone-link phone-block__phone-link--colored" href="tel:+88005558628" title="Позвоните нам">8 800 555-86-28</a>
-        </div>
-        <div class="mail-block">
-          <svg class="mail-block__mail-icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
-            xmlns="http://www.w3.org/2000/svg">
-            <circle cx="22.5" cy="22.5" r="22.5" fill="#121936" />
-            <path fill-rule="evenodd" clip-rule="evenodd"
-              d="M30.1393 27.4663L25.8089 23.5L30.1393 19.5337L29.5488 18.9026L23.25 24.6719L16.9512 18.9026L16.3607 19.5337L20.6911 23.5L16.3607 27.4663L16.9512 28.0974L21.3308 24.0859L23.25 25.8438L25.1691 24.0859L29.5488 28.0974L30.1393 27.4663ZM15.5759 17.25C14.7669 17.25 14.1111 17.9488 14.1111 18.8079V28.1921C14.1111 29.0525 14.7616 29.75 15.5759 29.75H30.924C31.733 29.75 32.3889 29.0512 32.3889 28.1921V18.8079C32.3889 17.9475 31.7383 17.25 30.924 17.25H15.5759Z"
-              fill="" />
-          </svg>
-          <a class="mail-block__mail-link mail-block__mail-link--colored" href="mailto:mail@htmlacademy.ru" title="Напишите нам">mail@htmlacademy.ru</a>
+        <div class="main-nav__contacts">
+          <div class="phone-block">
+            <svg class="phone-block__icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle cx="22.5" cy="22.5" r="22.5" fill="#121936" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M22.4999 15.0862C19.7035 15.0862 16.9003 15.5588 15.8832 16.5009C15.0393 17.2825 14.758 18.6633 14.6632 19.5375C14.6632 19.5375 14.6501 19.6239 14.6501 19.6611C14.6501 20.0039 14.9444 20.2789 15.3043 20.2789C15.3468 20.2789 16.92 20.1584 17.8685 20.0843C17.8913 20.0811 17.9143 20.0781 17.9372 20.0719C18.2904 20.0627 18.575 19.7908 18.575 19.4541L18.5782 18.237C18.5782 17.8601 18.9021 17.5574 19.3012 17.5574H25.6987C26.0978 17.5574 26.4218 17.8601 26.4218 18.237L26.425 19.4541C26.425 19.7908 26.7095 20.0627 27.0628 20.0719C27.0854 20.0781 27.1085 20.0811 27.1315 20.0843C28.0801 20.1583 29.6533 20.2789 29.6957 20.2789C30.0553 20.2789 30.3499 20.0039 30.3499 19.6611C30.3499 19.6239 30.3368 19.5375 30.3368 19.5375C30.2419 18.6633 29.9609 17.2826 29.117 16.5009C28.0996 15.5588 25.2964 15.0862 22.4999 15.0862ZM22.4999 23.1177C21.7771 23.1177 21.1916 23.6706 21.1916 24.3533C21.1916 25.036 21.7771 25.5889 22.4999 25.5889C23.2228 25.5889 23.8082 25.036 23.8082 24.3533C23.8082 23.6706 23.2228 23.1177 22.4999 23.1177ZM21.5187 20.3375V19.5653C21.5187 19.139 21.1524 18.793 20.7011 18.793C20.2498 18.793 19.8834 19.1391 19.8834 19.5653V20.3375L15.4709 24.7889C15.1669 25.07 14.9771 25.4622 14.9771 25.8948V27.1335C14.9771 27.8162 15.5626 28.3691 16.2854 28.3691H16.6125V29.1414C16.6125 29.5677 16.979 29.9136 17.4302 29.9136C17.8815 29.9136 18.2479 29.5677 18.2479 29.1414V28.3691H26.752V29.1414C26.752 29.5677 27.1182 29.9136 27.5697 29.9136C28.021 29.9136 28.3873 29.5677 28.3873 29.1414V28.3691H28.7144C29.4373 28.3691 30.0227 27.8162 30.0227 27.1335V25.8948C30.0227 25.4622 29.833 25.07 29.5289 24.7889L25.1166 20.3375V19.5653C25.1166 19.139 24.7502 18.793 24.2989 18.793C23.8476 18.793 23.4812 19.1391 23.4812 19.5653V20.3375H21.5187ZM22.4999 21.8821C23.9456 21.8821 25.1166 22.988 25.1166 24.3533C25.1166 25.7187 23.9457 26.8247 22.4999 26.8247C21.0543 26.8247 19.8834 25.7187 19.8834 24.3533C19.8834 22.988 21.0543 21.8821 22.4999 21.8821Z"
+                fill="" />
+            </svg>
+            <a class="phone-block__link phone-block__link--colored" href="tel:+88005558628"
+              title="Позвоните нам">8 800 555-86-28</a>
+          </div>
+          <div class="mail-block">
+            <svg class="mail-block__icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
+              xmlns="http://www.w3.org/2000/svg">
+              <circle cx="22.5" cy="22.5" r="22.5" fill="#121936" />
+              <path fill-rule="evenodd" clip-rule="evenodd"
+                d="M30.1393 27.4663L25.8089 23.5L30.1393 19.5337L29.5488 18.9026L23.25 24.6719L16.9512 18.9026L16.3607 19.5337L20.6911 23.5L16.3607 27.4663L16.9512 28.0974L21.3308 24.0859L23.25 25.8438L25.1691 24.0859L29.5488 28.0974L30.1393 27.4663ZM15.5759 17.25C14.7669 17.25 14.1111 17.9488 14.1111 18.8079V28.1921C14.1111 29.0525 14.7616 29.75 15.5759 29.75H30.924C31.733 29.75 32.3889 29.0512 32.3889 28.1921V18.8079C32.3889 17.9475 31.7383 17.25 30.924 17.25H15.5759Z"
+                fill="" />
+            </svg>
+            <a class="mail-block__link mail-block__link--colored" href="mailto:mail@htmlacademy.ru"
+              title="Напишите нам">mail@htmlacademy.ru</a>
+          </div>
         </div>
         <ul class="social-list">
-          <li class="social-list__social-item">
+          <li class="social-list__item">
             <a href="https://Facebook.com" title="Facebook">
               <svg width="11" height="21" viewBox="0 0 11 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -92,7 +96,7 @@
               </svg>
             </a>
           </li>
-          <li class="social-list__social-item">
+          <li class="social-list__item">
             <a href="https://vk.com" title="В контакте">
               <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path
@@ -101,7 +105,7 @@
               </svg>
             </a>
           </li>
-          <li class="social-list__social-item">
+          <li class="social-list__item">
             <a href="https://instagram.com" title="Instagram">
               <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g opacity="0.5">
@@ -195,14 +199,16 @@
     </section>
     <section class="countries">
       <div class="countries__wrapper wrapper">
-        <h2 class="section-title section-title--modified">Направления</h2>
-        <p class="section-description section-description--modified">
-          Мы не продаем туры <br>
-          и ничего не рекламируем. <br>
-          Люди сами пишут о странах, <br>
-          куда хотели бы отправиться <br>
-          и чем можно там заняться.
-        </p>
+        <div class="countries__title-block">
+          <h2 class="section-title">Направления</h2>
+          <p class="section-description section-description--colored">
+            Мы не продаем туры <br>
+            и ничего не рекламируем. <br>
+            Люди сами пишут о странах, <br>
+            куда хотели бы отправиться <br>
+            и чем можно там заняться.
+          </p>
+        </div>
         <div class="countries__card">
           <img class="countries__flag" src="https://placekitten.com/35/24" alt="Thailand flag" width="35" height="24" />
           <img class="countries__img" src="../img/thailand-mobile.png" alt="Thailand flag" width="270" height="110" />
@@ -240,8 +246,8 @@
         <div class="countries__card">
           <img class="countries__flag" src="https://placekitten.com/35/24" alt="Czech flag" />
           <img class="countries__img" src="../img/czech-mobile.png" alt="Thailand flag" width="270" height="110" />
-          <div class="country-description czech-description">
-            <h3 class="country-description__header country-description__header--modified">Чехия</h3>
+          <div class="country-description country-description--indent">
+            <h3 class="country-description__header">Чехия</h3>
             <div class="country-description__visitors-counter">
               <svg class="country-description__user-icon" width="12" height="12" viewBox="0 0 12 12" fill="none"
                 xmlns="http://www.w3.org/2000/svg">
@@ -251,7 +257,7 @@
               </svg>
               <span class="country-description__visitors-number">5326</span>
             </div>
-            <p class="country-description__content country-description__content--modified">Закоулки старой <br> Европы
+            <p class="country-description__content">Закоулки старой <br> Европы
             </p>
           </div>
         </div>
@@ -260,17 +266,19 @@
     </section>
     <section class="users">
       <div class="users__wrapper wrapper">
-        <h2 class="section-title section-title--modified">Попутчики</h2>
-        <p class="section-description section-title--modified">
-          Все мы индивидуальны и у <br>
-          каждого свой взгляд на <br>
-          идеальный отдых. Одному <br>
-          нужен пляж и коктейль, а <br>
-          другому маршрут для хайкинга.
-        </p>
-        <p class="section-content section-title--modified section-content--indent">
-          Теперь можно легко найти единомышленников!
-        </p>
+        <div class="users__title-block">
+          <h2 class="section-title">Попутчики</h2>
+          <p class="section-description">
+            Все мы индивидуальны и у <br>
+            каждого свой взгляд на <br>
+            идеальный отдых. Одному <br>
+            нужен пляж и коктейль, а <br>
+            другому маршрут для хайкинга.
+          </p>
+          <p class="section-content">
+            Теперь можно легко найти единомышленников!
+          </p>
+        </div>
         <div class="user-card">
           <img class="user-card__photo" src="https://placekitten.com/270/270" alt="User photo" width="270"
             height="270" />
@@ -434,13 +442,13 @@
             </ul>
           </div>
         </div>
-        <button class="show-button show-button--modified">Показать всех</button>
+        <button class="show-button">Показать всех</button>
       </div>
     </section>
     <section class="business-rates">
       <div class="business-rates__wrapper wrapper">
         <div class="business-rates__header">
-          <h2 class="section-title section-title--profile">
+          <h2 class="section-title">
             Добавьте <br> свой <br> профиль
           </h2>
         </div>
@@ -483,25 +491,26 @@
           Остались вопросы? <br />
           Мы с радостью на них ответим!
         </p>
-        <div class="phone-block phone-block--modified">
-          <svg class="phone-block__phone-icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
+        <div class="phone-block">
+          <svg class="phone-block__icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <circle cx="22.5" cy="22.5" r="22.5" fill="#121936" />
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M22.4999 15.0862C19.7035 15.0862 16.9003 15.5588 15.8832 16.5009C15.0393 17.2825 14.758 18.6633 14.6632 19.5375C14.6632 19.5375 14.6501 19.6239 14.6501 19.6611C14.6501 20.0039 14.9444 20.2789 15.3043 20.2789C15.3468 20.2789 16.92 20.1584 17.8685 20.0843C17.8913 20.0811 17.9143 20.0781 17.9372 20.0719C18.2904 20.0627 18.575 19.7908 18.575 19.4541L18.5782 18.237C18.5782 17.8601 18.9021 17.5574 19.3012 17.5574H25.6987C26.0978 17.5574 26.4218 17.8601 26.4218 18.237L26.425 19.4541C26.425 19.7908 26.7095 20.0627 27.0628 20.0719C27.0854 20.0781 27.1085 20.0811 27.1315 20.0843C28.0801 20.1583 29.6533 20.2789 29.6957 20.2789C30.0553 20.2789 30.3499 20.0039 30.3499 19.6611C30.3499 19.6239 30.3368 19.5375 30.3368 19.5375C30.2419 18.6633 29.9609 17.2826 29.117 16.5009C28.0996 15.5588 25.2964 15.0862 22.4999 15.0862ZM22.4999 23.1177C21.7771 23.1177 21.1916 23.6706 21.1916 24.3533C21.1916 25.036 21.7771 25.5889 22.4999 25.5889C23.2228 25.5889 23.8082 25.036 23.8082 24.3533C23.8082 23.6706 23.2228 23.1177 22.4999 23.1177ZM21.5187 20.3375V19.5653C21.5187 19.139 21.1524 18.793 20.7011 18.793C20.2498 18.793 19.8834 19.1391 19.8834 19.5653V20.3375L15.4709 24.7889C15.1669 25.07 14.9771 25.4622 14.9771 25.8948V27.1335C14.9771 27.8162 15.5626 28.3691 16.2854 28.3691H16.6125V29.1414C16.6125 29.5677 16.979 29.9136 17.4302 29.9136C17.8815 29.9136 18.2479 29.5677 18.2479 29.1414V28.3691H26.752V29.1414C26.752 29.5677 27.1182 29.9136 27.5697 29.9136C28.021 29.9136 28.3873 29.5677 28.3873 29.1414V28.3691H28.7144C29.4373 28.3691 30.0227 27.8162 30.0227 27.1335V25.8948C30.0227 25.4622 29.833 25.07 29.5289 24.7889L25.1166 20.3375V19.5653C25.1166 19.139 24.7502 18.793 24.2989 18.793C23.8476 18.793 23.4812 19.1391 23.4812 19.5653V20.3375H21.5187ZM22.4999 21.8821C23.9456 21.8821 25.1166 22.988 25.1166 24.3533C25.1166 25.7187 23.9457 26.8247 22.4999 26.8247C21.0543 26.8247 19.8834 25.7187 19.8834 24.3533C19.8834 22.988 21.0543 21.8821 22.4999 21.8821Z"
               fill="" />
           </svg>
-          <a class="phone-block__phone-link" href="tel:+88005558628" title="Позвоните нам">8 800 555-86-28</a>
+          <a class="phone-block__link" href="tel:+88005558628" title="Позвоните нам">8 800 555-86-28</a>
         </div>
-        <div class="mail-block mail-block--modified">
-          <svg class="mail-block__mail-icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
+        <div class="mail-block">
+          <svg class="mail-block__icon" width="45" height="45" viewBox="0 0 45 45" fill="none"
             xmlns="http://www.w3.org/2000/svg">
             <circle cx="22.5" cy="22.5" r="22.5" fill="#121936" />
             <path fill-rule="evenodd" clip-rule="evenodd"
               d="M30.1393 27.4663L25.8089 23.5L30.1393 19.5337L29.5488 18.9026L23.25 24.6719L16.9512 18.9026L16.3607 19.5337L20.6911 23.5L16.3607 27.4663L16.9512 28.0974L21.3308 24.0859L23.25 25.8438L25.1691 24.0859L29.5488 28.0974L30.1393 27.4663ZM15.5759 17.25C14.7669 17.25 14.1111 17.9488 14.1111 18.8079V28.1921C14.1111 29.0525 14.7616 29.75 15.5759 29.75H30.924C31.733 29.75 32.3889 29.0512 32.3889 28.1921V18.8079C32.3889 17.9475 31.7383 17.25 30.924 17.25H15.5759Z"
               fill="#FFD74B" />
           </svg>
-          <a class="mail-block__mail-link" href="mailto:mail@htmlacademy.ru" title="Напишите нам">mail@htmlacademy.ru</a>
+          <a class="mail-block__link" href="mailto:mail@htmlacademy.ru"
+            title="Напишите нам">mail@htmlacademy.ru</a>
         </div>
       </div>
     </section>
@@ -530,8 +539,7 @@
       <h2 class="visually-hidden">Карта</h2>
       <iframe class="map__map-google"
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.686536866056!2d30.321989380876403!3d59.93734346338867!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fb661d55f%3A0xd0cc7f055debe430!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1608728576437!5m2!1sru!2sru"
-        width="320" height="424" style="border:0;" allowfullscreen="" aria-hidden="false"
-        tabindex="0"></iframe>
+        width="320" height="424" style="border: 0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
   </main>
   <footer class="footer">
@@ -539,8 +547,8 @@
       <a class="footer__logo-link" href="index.html">
         <img class="footer__logo" src="img/logo-pognali-blue.png" alt="Логотип Погнали" width="96" height="15" />
       </a>
-      <ul class="social-list social-list--modified">
-        <li class="social-list__social-item social-list__social-item--modified">
+      <ul class="social-list">
+        <li class="social-list__item social-list__item--colored-bg">
           <a href="https://Facebook.com" title="Facebook">
             <svg width="11" height="21" viewBox="0 0 11 21" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -549,7 +557,7 @@
             </svg>
           </a>
         </li>
-        <li class="social-list__social-item social-list__social-item--modified">
+        <li class="social-list__item social-list__item--colored-bg">
           <a href="https://vk.com" title="В контакте">
             <svg width="23" height="12" viewBox="0 0 23 12" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
@@ -558,7 +566,7 @@
             </svg>
           </a>
         </li>
-        <li class="social-list__social-item social-list__social-item--modified">
+        <li class="social-list__item social-list__item--colored-bg">
           <a href="https://instagram.com" title="Instagram">
             <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
               <g opacity="0.5">
