--- a/source/catalog.html
+++ b/source/catalog.html
@@ -173,13 +173,12 @@
         <h2 class="visually-hidden">Еда</h2>
         <p class="filters__section-header">ЕДА</p>
       </section>
-      <section class="filters__subtitle">
-        <h2 class="visually-hidden">Транспорт</h2>
-        <p class="filters__section-header">ТРАНСПОРТ</p>
-        <input class="filters__filter-checkbox" type="checkbox" name="airplain" checked>
-        <input class="filters__filter-checkbox" type="checkbox" name="bus" checked>
-        <input class="filters__filter-checkbox" type="checkbox" name="bicycle">
-        <input class="filters__filter-checkbox" type="checkbox" name="foot" checked>
+      <section class="transport">
+        <h3 class="transport__header">ТРАНСПОРТ</h3>
+        <input class="transport__checkbox" type="checkbox" name="airplain" checked>
+        <input class="transport__checkbox" type="checkbox" name="bus" checked>
+        <input class="transport__checkbox" type="checkbox" name="bicycle">
+        <input class="transport__checkbox" type="checkbox" name="foot" checked>
       </section>
       <section class="filters__level">
         <h2 class="visually-hidden">Левел</h2>
