--- a/source/form.html
+++ b/source/form.html
@@ -194,7 +194,7 @@
             <a class="plans-step__some-step plans-step__some-step--backgroung" href="#plans-step2">СЛЕДУЮЩИЙ ШАГ</a>
           </div>
           <div class="plans-step plans-step--step2" id="plans-step2">
-            <div class="countries-block">
+            <div class="countries-block visually-hidden">
               <h4 class="countries-block__header">Выберите страну</h4>
               <div class="countries-block__close-modal"></div>
               <table class="letters-table">
